# rmesg

./: .gitignore  .travis.yml  Cargo.toml  README.md  build-container.sh  dmesg-perf-compare.sh
.github/workflows/: build.yml  release.yml
benches/: benchmark.rs
src/: common.rs  default.rs  entry.rs  error.rs  klogctl.rs  kmsgfile.rs  lib.rs  linux.rs  main.rs
