[package]
name = "rmesg"
version = "1.0.4"
authors = ["Archis Gore <archis@polyverse.com>"]
edition = "2018"
license-file = "LICENSE"
categories = ["os", "command-line-utilities"]
keywords = ["dmesg", "klogctl", "printk", "syslog"]
readme = "README.md"
repository = "https://github.com/polyverse/rmesg"
description = """This is a fully Rust-based implementation of the popular dmesg Linux utility, giving
 programmatic access to the kernel log buffer."""

[[bin]]
name = "rmesg"
path = "src/main.rs"
required-features = ["async"]

[lib]
name = "rmesg"
path = "src/lib.rs"

[features]
default = ["sync"]
# The default set of optional packages. Most people will want to use these
# packages, but they are strictly optional. Note that `session` is not a package
# but rather another feature listed in this manifest.
sync = []
async = ["futures", "futures-util", "tokio"]
extra-traits = ["schemars"]

[dependencies]
libc = "0.2.81"
cfg-if = "1.0.0"
enum-display-derive = "0.1.0"
errno = "0.2.7"
clap = "2.33.3"
lazy_static = "1.4.0"
regex = "1.4.2"
strum = "0.20.0"
strum_macros = "0.20.1"
serde = { version = "1.0.118", features = ["derive", "rc"] }
num = "0.3.1"
num-traits = "0.2"
num-derive = "0.3.3"
nonblock = "0.1.0"

# Optional - on extra-traits
schemars = { version = "0.8.0", optional = true }

# Optional - only enabled through the "async" feature
futures = { version = "0.3.8", optional = true }
futures-util = { version = "0.3.8", optional = true }
tokio = { version = "1.0.1", features = ["rt", "fs", "io-util", "macros"], optional = true }

[dev-dependencies]
tokio-test = "0.4.0"
tokio-stream = { version = "0.1.0" }
